--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <section class="showcase">
                 <h1>Enjoy our flight Entertainment</h1>
                 <p>Expereince our new flight entertainment where you can watch multiple movies and series or shows for free</p>
-            
+            <p>Please note this is not a real company</p>
 
             </section>
         </div>
